# WasmTools

./: .gitignore  README.md  Test.sh  index.html  main.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
.github/workflows/: ci-ubuntu.yml  ci.yml
cpp-lib/: CMakeLists.txt  InitProject.sh
cpp-lib/src/: Main.cpp
js-bindings/: WASIModule.ts  wasi_snapshot_preview1.ts
src/: index.html  index.js  index.ts
wasm-js-bridge/: .gitignore  extract-wasm-export.js  extract-wasm-export.ts  extractComments.py  extractWasmExport.py  gen-bridge.py
